<resources>
    <string name="common_ok">OK</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_remove">Remove</string>
    <string name="common_next">Next</string>
    <string name="common_no_thanks">No, thanks</string>
    <string name="common_skip">Skip</string>
    <string name="common_submit">Submit</string>
    <string name="common_error">Error</string>
    <string name="common_search">Search</string>
    <string name="error_api">Error communicating with the API</string>

    <string name="join_contest">Join Contest</string>
    <string name="create_contest">Create Contest</string>
    <string name="create_join_prompt">Create and join contests</string>
    <string name="contestant_welcome_message">Welcome!</string>

    <string name="join_contest_bar_title">Join contest</string>
    <string name="enter_code">Enter Code #</string>
    <string name="error_redeeming_code">Can\'t seem to find that code</string>
    <string name="error_redeeming_code_title">Error</string>
    <string name="name_entry">Name your submission</string>
    <string name="entry_image_bar_title">Submit Image</string>
    <string name="entry_image_question">Add an image for \n%1$s?</string>
    <string name="entry_image_description">You can optionally add an image, so that judges can identify your submission more easily.</string>
    <string name="upload_image_camera">Camera</string>
    <string name="upload_image_library">Library</string>
    <string name="pick_image_title">Select Picture</string>
    <string name="entry_image_preview_caption">%1$s looks great!</string>
    <string name="entry_image_content_description">Entry image</string>
    <string name="error_creating_entry">Please check your entry details and try again.</string>
    <string name="error_creating_entry_title">Error creating entry</string>

    <string name="new_contest">New Contest</string>
    <string name="name_your_contest">Name your contest</string>
    <string name="text_empty_error">Error, please fill out all fields</string>
    <string name="scoring_categories">Scoring Categories</string>
    <string name="category_name">Category Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="category_name_example">Score</string>
    <string name="category_description_example">Overall Submission Score</string>
    <string name="add_a_category">Add a category</string>

    <string name="contest_status_bar_title">Contest Status</string>

    <string name="status_waiting_title">Almost there!</string>
    <string name="status_waiting_description">We\'ll let you know when the results are in.</string>

    <string name="status_results_available_title">The Results Are In!</string>
    <string name="status_results_available_button">View results</string>

    <string name="scoring_weight">Scoring Weight</string>
    <string name="contest_overview_intro">%1$s waiting to be scored on the criteria below.</string>
    <string name="contest_overview_submit_button_text">Let\'s get started</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="poor">Poor</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="excellent">Excellent</string>
    <string name="submitting_contest">Submitting contest</string>

    <string name="send_invitations_menu_action">Invite</string>
    <string name="no_contacts_selected">Please select a contact to invite</string>
    <string name="no_contacts_permissions">We don\'t have access to your contacts. You can enable settings in %1$s.</string>
    <string name="no_contacts_permissions_link">privacy settings</string>
    <string name="invite_contestants_bar_title">Select Contestants</string>
    <string name="invite_contestants_intro">Invite contestants from your contacts!</string>
    <string name="invite_contestants">Invite contestants</string>
    <string name="invite_judges_bar_title">Select Judges</string>
    <string name="invite_judges_intro">Invite judges from your contacts!</string>
    <string name="invite_judges">Invite judges</string>
    <string name="add_contacts_quantified_action">Add %1$s</string>

    <string name="one_point">1x</string>
    <string name="select_submission_prompt">Select a submission to begin with</string>
    <string name="default_zero_score">0.00</string>
    <string name="submissions">Submissions</string>
    <string name="default_category_name">Score</string>
    <string name="default_category_description">Overall Submission Score</string>
    <string name="rate_entry_x_out_of_entries">Rate %1$d out of %2$d</string>
    <string name="review_contest">Review Contest</string>
    <string name="welcome_to_contest_text">Welcome to %1$s</string>
    <string name="contest_result_first_place">1st</string>
    <string name="contest_result_second_place">2nd</string>
    <string name="contest_result_third_place">3rd</string>
    <string name="contest_result_other_places"/>
    <string name="contest_results_no_entries_message">No entries have been submitted.</string>
    <string name="results">Results</string>
    <string name="start_contest">Start Contest</string>
    <string name="awaiting_submissions">Awaiting \nSubmissions</string>
    <string name="end_of_contest">End of \nContest</string>
    <string name="judging">Judging</string>
    <string name="start_contest_prompt">Are you sure you want to start your contest?</string>
    <string name="not_all_contestants_received_prompt">Not all contestants have submitted</string>
    <string name="common_end_contest">End Contest</string>
    <string name="review_rating">Review Ratings</string>
    <string name="not_all_judge_scores_received_prompt">Not all judges have submitted</string>
    <string name="end_contest_prompt">Are you sure you want to end your contest?</string>
    <string name="review_submissions">Review Submissions</string>
    <string name="review_your_scores">Review Your Scores</string>
    <string name="crop_message">Crop %1$s</string>
    <string name="crop_error_message">Cropping failed</string>
    <string name="common_share">Share</string>
    <string name="common_save">Save</string>
</resources>
