<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/entry_image_submit_button"
        style="@style/AppTheme.BottomNavigationButton"
        android:text="@string/common_submit"
        />

    <android.support.percent.PercentRelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/entry_choose_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/entry_image_submit_button"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/entry_image_question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_image_question"
            />

        <TextView
            android:id="@+id/entry_image_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_image_question_text_view"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/entry_image_description"
            />

        <Button
            android:id="@+id/entry_image_camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_image_description_text_view"
            android:text="@string/upload_image_camera"
            app:layout_widthPercent="48%"
            />

        <Button
            android:id="@+id/entry_image_gallery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/entry_image_description_text_view"
            android:text="@string/upload_image_library"
            app:layout_widthPercent="48%"
            />

    </android.support.percent.PercentRelativeLayout>

    <RelativeLayout
        android:id="@+id/entry_preview_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/entry_image_submit_button"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/entry_preview_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/entry_image_preview_caption"
            />

        <io.intrepid.contest.customviews.RemovableImageFrameLayout
            android:id="@+id/entry_preview_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/entry_preview_label_text_view"
            />

    </RelativeLayout>

</RelativeLayout>
