<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contest_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.intrepid.contest.screens.contestoverview.ContestOverviewActivity"
    >

    <Button
        android:id="@+id/contest_overview_submit_button"
        style="@style/AppTheme.BottomNavigationButton"
        android:layout_alignParentBottom="true"
        android:text="@string/contest_overview_submit_button_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/contest_overview_submit_button"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/contest_overview_intro_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.TextViewLabel"
            android:textColor="@color/colorGreyishBlack"
            />

        <TextView
            style="@style/ContestOverviewTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/description"
            />

        <TextView
            android:id="@+id/contest_overview_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/overview_description_box_right_margin"
            android:textColor="@color/colorEditText"
            />

        <View style="@style/AppTheme.HorizontalRow"/>

        <TextView
            style="@style/ContestOverviewTextViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/category_overview_margin_left"
            android:text="@string/categories"
            />

        <include layout="@layout/include_layout_recycler_view"/>

    </LinearLayout>
</RelativeLayout>
